# PointFeatureHub2

./: .gitignore  CMakeLists.txt  README.md  run.py
cfg/: config.yaml
cfg/detect/: base.yaml  empty.yaml  orb.yaml  r2d2.yaml  sift.yaml  super_point.yaml
cfg/load/: base.yaml  network.yaml
cfg/match/: adalam.yaml  bf.yaml  loftr.yaml  magsac.yaml  one_pose.yaml  onepose.yaml  super_glue.yaml
core/: core.py  decorator.py  wrapper.py
include/: detector_client.hpp  matcher32d_client.hpp  matcher_client.hpp
method/: __init__.py  adalam.py  base.py  bf.py  loftr.py  magsac.py  one_pose.py  orb.py  r2d2.py  run_adalam_server.py  sift.py  super_glue.py  super_point.py
test/: CMakeLists.txt  test_detector_client.cpp  test_matcher32d_client.cpp  test_matcher_client.cpp
